maze.lessons.maze.island.IslandMaze.scala.error
Escaper:11: error: ';' expected but 'else' found.
    		else {
                ^Escaper:24: error: '}' expected but 'case' found.
  case 1 => // suivre à gauche
  ^Escaper:71: error: eof expected but '}' found.
}
^